Updated examples with new install-version format (major.minor.incremental).